# pfconf-ls

./: .gitignore  .rustfmt.toml  ARCH.md  Cargo.toml  DEBUG.md  rust-toolchain.toml
.cargo/: config.toml
crates/pfconf-ls/: Cargo.toml  build.rs
crates/pfconf-ls/src/: bindings.rs  dispatch.rs  lib.rs  lsp.rs  wasi.rs
crates/pfconf-ls/src/cli/: flags.rs
crates/pfconf-ls/src/thread/: qos.rs  role.rs
crates/pfconf-ls/src/wasi/: bindings.rs
crates/pfconf-ls/wit/: pfconf-ls.wit
crates/pfconf-tree-sitter/: Cargo.toml  build.rs
crates/pfconf-tree-sitter/src/: lib.rs
extensions/vscodium/: .cspell.json  .eslintrc.json  .gitignore  .prettierrc  .vscodeignore  client.js  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.dist.json  tsconfig.json  vitest.config.ts
extensions/vscodium/scripts/: build.mjs
extensions/vscodium/src/: main.ts
extensions/vscodium/src/action/: action.interface.ts  actions.service.ts  open-logs.action.ts  restart-server.action.ts
extensions/vscodium/src/commands/: open-logs.command.ts
extensions/vscodium/src/config/: config.helper.ts  config.util.ts
extensions/vscodium/src/container/: container.interface.ts  container.service.ts
extensions/vscodium/src/log/: line.formatter.ts  log.interface.ts  log.service.ts
extensions/vscodium/src/status-bar/: status-bar.service.ts
extensions/vscodium/src/ui/: status-bar.service.ts
grammar/: .eslintrc.json  .gitignore  eslint.config.js  grammar.js  grammar.openbsd.whatever  package.json  pnpm-lock.yaml
grammar/examples/: pf.conf
grammar/queries/: highlights.scm
grammar/src/: grammar.json  node-types.json  parser.c  scanner.c
grammar/test/corpus/: options.txt
src/: log.rs  thread.rs  util.rs  version.rs
src/thread/: qos.rs
