cargo-features = ["edition2024"]

[workspace]
resolver = "2"
members = ["build/xtask*", "crates/*"]
default-members = ["build/xtask*"]

[workspace.package]
edition = "2024"
license = "BSD-2-Clause"
authors = ["Guillaume 'Yugo' Coguiec <mail@gcoguiec.com>"]

[workspace.dependencies]
libc = "0.2.153"
cfg-if = "1.0.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
xflags = "0.3.2"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "env-filter", "ansi"] }
nu-ansi-term = "0.50.0"
