cargo-features = ["edition2024"]

[package]
name = "pfconf-ls"
version = "0.1.0"
edition = "2024"

[package.metadata.component]
package = "gcoguiec:pfconf-ls"

[[bin]]
name = "pfconf-ls"
path = "src/bin/main.rs"

[dependencies]
libc = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
cfg-if = { workspace = true }
xflags = { workspace = true }
lsp-server = "0.7.6"
lsp-types = "0.95.1"
pfconf-tree-sitter = { path = "../pfconf-tree-sitter" }

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_System_Threading"
]

[target.'cfg(all(target_os = "wasi", target_env = "p1"))'.lib]
crate-type = ["cdylib"]

[target.'cfg(all(target_arch = "wasm32"))'.profile.release]
lto = "fat"
codegen-units = 1
