cargo-features = ["edition2024"]

[package]
name = "pfconf-ls"
version = "0.1.0"
edition = "2024"

[package.metadata.component]
package = "gcoguiec:pfconf-ls"

[package.metadata.component.bindings]
path = "src/wasi/bindings.rs"

[package.metadata.component.dependencies]

[[bin]]
name = "pfconf-ls"
path = "src/bin/main.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[dependencies]
libc = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
cfg-if = { workspace = true }
xflags = { workspace = true }
lsp-server = "0.7.6"
lsp-types = "0.95.1"
pfconf-tree-sitter = { path = "../pfconf-tree-sitter" }

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_System_Threading"
]

[target.'cfg(target_os = "wasi")'.dependencies.wit-bindgen-rt]
version = "0.30.0"
